refactor(header,nav): altera a ortografia

--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -6,7 +6,7 @@
                 <i class="material-icons">
                     home
                 </i>
-                Inicio
+                Início
             </a>
             <a mat-list-item>
                 <i class="material-icons">
