--- a/src/app/components/template/nav/nav.component.css
+++ b/src/app/components/template/nav/nav.component.css
@@ -1,6 +1,7 @@
 .sidenav {
     background-color: gray;
     width: 200px;
+    height: 842px;
 }
 
 .sidenav a {
@@ -13,6 +14,4 @@
 
 .content {
     padding: 16px;
-    background-color: white;
-    color: black;
 }
