--- a/src/app/views/product-crud/product-crud.component.html
+++ b/src/app/views/product-crud/product-crud.component.html
@@ -1,3 +1,3 @@
-<button mat-raised-button (click)="navigateToProductCreate()">
+<button mat-raised-button (click)="navigateToProductCreate()" color="primary">
     Novo Produto
 </button>
